# tachyon-mini

./: Cargo.toml  README.md  SECURITY_FIXES.md  dex.md  docs.,d  ideas.md  incentives.md  pastasaus.rs  plan.md  qerkleproto.md  r1cs.rs  ragu-maybe.rs  status.rs  stripe.md  zebra_rpc
.github/workflows/: ci.yml
atachyonmini1/: .gitignore  Cargo.toml  README.md  audit.md  dex.md  incentives.md  plan.md  stripe.md
atachyonmini1/.github/workflows/: ci.yml
atachyonmini1/benches/: Cargo.toml
atachyonmini1/benches/benches/: circuit_proving.rs  poseidon_bench.rs  tachygram_ops.rs
atachyonmini1/crates/accum_mmr/: Cargo.toml
atachyonmini1/crates/accum_set/: Cargo.toml
atachyonmini1/crates/bench/: Cargo.toml
atachyonmini1/crates/bench/src/: lib.rs
atachyonmini1/crates/circuits/: Cargo.toml
atachyonmini1/crates/circuits/src/: lib.rs  metrics.rs  orchard.rs  pcs.rs  proof_cache.rs  recursion.rs  tachy.rs  tachygram.rs  unified_block.rs  wallet_step.rs
atachyonmini1/crates/circuits/tests/: proptest.rs
atachyonmini1/crates/cli/: Cargo.toml
atachyonmini1/crates/cli/src/: lib.rs  main.rs
atachyonmini1/crates/core/: Cargo.toml
atachyonmini1/crates/core/src/: lib.rs
atachyonmini1/crates/dex/: Cargo.toml
atachyonmini1/crates/dex/src/: lib.rs
atachyonmini1/crates/engines/: Cargo.toml
atachyonmini1/crates/engines/src/: engine.rs  lib.rs  spend_builder.rs  status.rs  uri.rs  zebra_rpc.rs
atachyonmini1/crates/header_sync/: Cargo.toml
atachyonmini1/crates/header_sync/src/: lib.rs
atachyonmini1/crates/net_iroh/: Cargo.toml
atachyonmini1/crates/net_iroh/src/: lib.rs
atachyonmini1/crates/node_ext/: Cargo.toml
atachyonmini1/crates/node_ext/node_data/: node_key
atachyonmini1/crates/node_ext/node_data/blobs/: blobs.db
atachyonmini1/crates/node_ext/src/: lib.rs
atachyonmini1/crates/onramp_stripe/: Cargo.toml
atachyonmini1/crates/onramp_stripe/src/: lib.rs
atachyonmini1/crates/oss_service/src/: lib.rs
atachyonmini1/crates/pcd_core/: Cargo.toml
atachyonmini1/crates/pcd_core/crates/node_ext/node_data/keys/: pcd_meta.json
atachyonmini1/crates/pcd_core/src/: lib.rs
atachyonmini1/crates/pq_crypto/: Cargo.toml  HYBRID_KEM.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md
atachyonmini1/crates/pq_crypto/examples/: hybrid_kem_demo.rs
atachyonmini1/crates/pq_crypto/src/: lib.rs  lib_new.rs
atachyonmini1/crates/qerkle/: Cargo.toml
atachyonmini1/crates/qerkle/src/: lib.rs
atachyonmini1/crates/ragu/: Cargo.toml  SPEC.md
atachyonmini1/crates/ragu/src/: accum_unified.rs  backend.rs  folding.rs  lib.rs  poly.rs  r1cs.rs  tachygram.rs
atachyonmini1/crates/storage/: Cargo.toml
atachyonmini1/crates/storage/src/: lib.rs
atachyonmini1/crates/tachyon_common/: Cargo.toml
atachyonmini1/crates/wallet/: Cargo.toml
atachyonmini1/crates/wallet/src/: dex.rs  lib.rs  storage.rs  zcash.rs
atachyonmini1/crates/zk/: Cargo.toml
atachyonmini1/crates/zk/src/: lib.rs
crates/accum_mmr/: Cargo.toml
crates/accum_mmr/src/: lib.rs
crates/accum_set/: Cargo.toml
crates/accum_set/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs  main.rs
crates/circuits/: Cargo.toml
crates/circuits/src/: lib.rs  orchard.rs  pcs.rs  recursion.rs  sparse_merkle.rs  tachy.rs  unified_block.rs  wallet_step.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/dex/: Cargo.toml
crates/dex/src/: lib.rs
crates/header_sync/: Cargo.toml
crates/header_sync/src/: lib.rs
crates/net_iroh/: Cargo.toml
crates/net_iroh/src/: lib.rs
crates/node_ext/: Cargo.toml
crates/node_ext/node_data/blobs/: blobs.db
crates/node_ext/src/: error.rs  lib.rs
crates/numiproof/: Cargo.toml
crates/numiproof/src/: lib.rs
crates/numiproof/src/examples/: demo.rs
crates/numiproof/tests/: basic.rs  property.rs  size_and_speed.rs  tamper.rs
crates/onramp_stripe/: Cargo.toml
crates/onramp_stripe/src/: lib.rs
crates/oss_service/: Cargo.toml
crates/oss_service/src/: lib.rs
crates/pcd_core/: Cargo.toml
crates/pcd_core/src/: lib.rs
crates/pq_crypto/: Cargo.toml
crates/pq_crypto/src/: lib.rs  lib_new.rs
crates/qerkle/src/: lib.rs
crates/ragu/: Cargo.toml
crates/ragu/src/: accum.rs  accum_unified.rs  backend.rs  backend_halo2.rs  gadgets.rs  lib.rs  pcd.rs  poly.rs  r1cs.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
crates/tachyon_common/: Cargo.toml
crates/tachyon_common/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
experiments/: HASH_CHAIN_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  TACHYGRAM_README.md  accumulation.rs  driver.rs  engine.rs  fiatshamirblake3.rs  pcd.rs  r1cs.rs  spend_builder.rs  tachygram.rs  tachygram_example.rs  uri.rs  wallet.rs
