[workspace]
members = [
    "crates/net_iroh",
    "crates/accum_mmr",
    "crates/accum_set",
    "crates/pcd_core",
    "crates/circuits",
    "crates/wallet",
    "crates/oss_service",
    "crates/node_ext",
    "crates/header_sync",
    "crates/pq_crypto",
    "crates/storage",
    "crates/cli",
    "crates/bench",
    "crates/qerkle",
    "crates/dex",
    "crates/onramp_stripe",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing
blake3 = "1.5"

# HTTP client for checkpoint bootstrap
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Iroh networking
# Pin iroh to 0.91.x to match iroh-blobs' internal iroh dependency
iroh = "0.91.2"
iroh-blobs = "0.92.0"

## Note: crate-specific optional deps (e.g., zebra-chain, equihash) are declared in their crates

# Zero-knowledge proofs
halo2_proofs = "0.3"
halo2_gadgets = "0.3"

# Cryptography
rand = "0.8"

# Logging
tracing = "0.1"
pasta_curves = "0.5"
ff = "0.13"
hex = "0.4"
zeroize = "1.7"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Tracing subscriber for pretty logs
tracing-subscriber = "0.3"

# Temporary files for testing
tempfile = "3.0"

# Async traits
async-trait = "0.1"

# PQ cryptography
aes-gcm = "0.10"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
fs2 = "0.4"

# JSON serialization for reports
serde_json = "1.0"

# Bytes utility
bytes = "1.0"

# Local crate dependencies
net_iroh = { path = "crates/net_iroh" }
pcd_core = { path = "crates/pcd_core" }
accum_mmr = { path = "crates/accum_mmr" }
circuits = { path = "crates/circuits" }
wallet = { path = "crates/wallet" }
oss_service = { path = "crates/oss_service" }
node_ext = { path = "crates/node_ext" }
header_sync = { path = "crates/header_sync" }
pq_crypto = { path = "crates/pq_crypto" }
storage = { path = "crates/storage" }
cli = { path = "crates/cli" }
bench = { path = "crates/bench" }
accum_set = { path = "crates/accum_set" }
qerkle = { path = "crates/qerkle" }
dex = { path = "crates/dex" }
onramp_stripe = { path = "crates/onramp_stripe" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"
