[workspace]
members = [
    "crates/core",
    "crates/zk",
    "crates/wallet",
    "crates/cli",
    "crates/engines",
    "crates/node_ext",
    "crates/net_iroh",
    "crates/header_sync",
    "crates/tachyon_common",
    "crates/circuits",
    "crates/pcd_core",
    "crates/accum_mmr",
    "crates/accum_set",
    "crates/dex",
    "crates/ragu",
    "crates/pq_crypto",
]
exclude = [
    "crates/onramp_stripe",
    "crates/qerkle",
    "crates/oss_service",
    "crates/bench",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing
blake3 = "1.5"

# HTTP client for checkpoint bootstrap
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Iroh networking - pin to matching minor to avoid rustls-webpki mismatch
iroh = "0.91.0"
iroh-blobs = "0.92.0"

## Note: crate-specific optional deps (e.g., zebra-chain, equihash) are declared in their crates

# Zero-knowledge proofs
halo2_proofs = { git = "https://github.com/zcash/halo2", package = "halo2_proofs", branch = "main" }
halo2_gadgets = { git = "https://github.com/zcash/halo2", package = "halo2_gadgets", branch = "main" }

# Cryptography
rand = "0.8"

# Logging
tracing = "0.1"
pasta_curves = "0.5"
ff = "0.13"
hex = "0.4"
zeroize = "1.7"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Tracing subscriber for pretty logs
tracing-subscriber = "0.3"

# Temporary files for testing
tempfile = "3.0"

# Property-based testing
proptest = "1.4"

# Fuzzing support
arbitrary = { version = "1.3", features = ["derive"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Async traits
async-trait = "0.1"

# PQ cryptography
aes-gcm = "0.10"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
fs2 = "0.4"

# JSON serialization for reports
serde_json = "1.0"

# Bytes utility
bytes = "1.0"

# Single-assignment statics for shared clients/pools
once_cell = "1.19"



tachyon_core = { path = "crates/core" }
tachyon_zk = { path = "crates/zk" }
wallet = { path = "crates/wallet" }
cli = { path = "crates/cli" }
storage = { path = "crates/storage" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"

[profile.release]
# Optimized for production: single codegen unit for better inlining, full LTO, abort on panic
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
# Keep dev builds reasonably fast, but catch overflows and keep debug info
debug = true
overflow-checks = true
incremental = true

