[[bin]]
name = "tachyon"
path = "src/main.rs"

[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = "0.3"
wallet = { path = "../wallet" }
pq_crypto = { path = "../pq_crypto" }
hex = "0.4"
