[package]
name = "onramp_stripe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
hex.workspace = true
wallet = { path = "../wallet" }
tachyon_common = { path = "../tachyon_common" }

# lightweight http server for webhook (axum)
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["http1", "server"] }
tower = "0.4"

# For signature verification (placeholder; real Stripe SDK can be added externally)
# Webhook verification deps
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
constant_time_eq = "0.3"


