[package]
name = "oss_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
net_iroh.workspace = true
pcd_core.workspace = true
bincode.workspace = true
blake3.workspace = true
tracing.workspace = true
bytes.workspace = true
pq_crypto.workspace = true
tempfile.workspace = true
accum_mmr.workspace = true
accum_set.workspace = true
