[package]
name = "pcd_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
circuits.path = "../circuits"
accum_mmr.path = "../accum_mmr"
accum_set.path = "../accum_set"
bincode = "1"
