[package]
name = "pq_crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
rand.workspace = true
aes-gcm = "0.10"
blake3.workspace = true
hex = "0.4"
zeroize = "1"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"

[features]
default = []
# Declare the optional feature to silence unexpected cfg warnings.
# When enabled by consumers, they can add the dependency as needed.
mldsa = []
