[package]
name = "ragu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ff.workspace = true
halo2_gadgets.workspace = true
pasta_curves.workspace = true
halo2_proofs.workspace = true
blake3.workspace = true
bincode.workspace = true
rand.workspace = true


[features]
default = ["ragu-nonuniform"]
# Enable the internal R1CS-like backend and mock prover
ragu-backend = []
# Placeholder for choosing Halo2 as a host circuit engine (used by other crates)
halo2-backend = []
# Orchard-aligned circuit helpers and constants (reserved)
ragu-orchard = []
# Non-uniform circuit evaluation drivers and oracle support
ragu-nonuniform = []

