[package]
name = "tachyon_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
zeroize.workspace = true
once_cell.workspace = true
reqwest.workspace = true

[features]
default = []

