[package]
name = "wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
net_iroh = { path = "../net_iroh" }
pcd_core = { path = "../pcd_core" }
pq_crypto = { path = "../pq_crypto" }
storage = { path = "../storage" }
blake3.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.0"
