[package]
name = "wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
net_iroh = { path = "../net_iroh" }
pcd_core = { path = "../pcd_core" }
pq_crypto = { path = "../pq_crypto" }
storage = { path = "../storage" }
node_ext = { path = "../node_ext" }
blake3.workspace = true
tracing.workspace = true
bincode.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
accum_mmr = { path = "../accum_mmr" }
dex = { path = "../dex" }

[dev-dependencies]
tempfile = "3.0"
