[package]
name = "bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
tempfile.workspace = true
tracing.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
iroh-blobs.workspace = true
ragu.workspace = true

# Local crate dependencies
accum_mmr.workspace = true
pcd_core.workspace = true
net_iroh.workspace = true
pq_crypto.workspace = true
storage.workspace = true
circuits.workspace = true
serde_json.workspace = true

[[bin]]
name = "tachyon-bench"
path = "src/main.rs"
