[package]
name = "header_sync"
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
tracing.workspace = true
net_iroh = { path = "../net_iroh" }
bincode.workspace = true
pq_crypto = { path = "../pq_crypto" }
reqwest.workspace = true
tachyon_common = { path = "../tachyon_common" }
zebra-chain = { version = "1.0.0-beta.38", optional = true }
hex.workspace = true

[features]
# Enable integration points for Zebra/Zcash header parsing and Equihash PoW verification.
# This feature gates code paths that expect exact Zcash header serialization and PoW checks.
zcash_zebra = ["zebra-chain"]
