[package]
name = "net_iroh"
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
blake3.workspace = true
bao-tree = "0.13"
bincode = "1.3"

# Additional dependencies for this crate
futures = "0.3"
tracing = "0.1"
bytes = "1.0"
rand = "0.8"
tempfile = "3.0"
hex.workspace = true

[dev-dependencies]
tokio-test = "0.4"
