[package]
name = "node_ext"
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
tracing.workspace = true
async-trait = "0.1"
net_iroh = { path = "../net_iroh" }
pcd_core = { path = "../pcd_core" }
accum_mmr = { path = "../accum_mmr" }
accum_set = { path = "../accum_set" }
pq_crypto = { path = "../pq_crypto" }
circuits = { path = "../circuits" }
bincode.workspace = true
ff.workspace = true
pasta_curves.workspace = true
ragu = { path = "../ragu" }
rand = "0.8"
bytes.workspace = true
thiserror = "1"
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel-verify = ["rayon"]
