[package]
name = "pcd_core"
version = "0.1.0"
edition = "2021"
authors = ["Tachyon Team"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
blake3.workspace = true
circuits.path = "../circuits"
accum_mmr.path = "../accum_mmr"
accum_set.path = "../accum_set"
bincode = "1"
ragu = { path = "../ragu", optional = true }
hex = "0.4"
ff.workspace = true
pasta_curves.workspace = true

[features]
default = []
# Enable Ragu mock backend for transition prove/verify
ragu = ["dep:ragu", "ragu/ragu-backend"]
